# git-hook-manager-max

./: BRIEF.md  PRIVACY.md  README.md  ghm.py  pyproject.toml  screenshots.md  store-listing.md
docs/: index.html
landing/: index.html
screenshots/: screenshot1.txt  screenshot2.txt  screenshot3.txt  terminal-demo.txt
