[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-hook-max"
version = "0.1.0"
description = "Manage Git hooks across projects with a visual dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Eric JOYE", email = "eric@ericjoye.com"},
]
keywords = ["git", "hooks", "pre-commit", "pre-push", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.scripts]
ghm = "ghm:main"
git-hook-manager = "ghm:main"

[project.urls]
Homepage = "https://github.com/ericjoye/git-hook-manager-max"
Issues = "https://github.com/ericjoye/git-hook-manager-max/issues"

[tool.hatch.build.targets.wheel]
packages = ["ghm"]
